[package]
name = "carapace"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
async-channel = "2"
thiserror = "2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "stun_benchmark"
harness = false
